# personal_blog_backend

./: Cargo.toml  notes.md
configuration/: base.toml
migrations/: 20260624162051_add_users.sql
scripts/: init_db.sh
src/: configuration.rs  error.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/cache/: app_cache.rs  mod.rs
src/domain/: email.rs  error.rs  mod.rs  password.rs  user.rs  username.rs
src/repositories/: user_repo.rs
src/routes/users/: register.rs
src/services/: password_service.rs
