[package]
name = "personal_blog"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
config = {version = "0.15.24", default-features = false, features = ["convert-case", "toml" , "serde_json"]}
secrecy = {version = "0.10.3", features = ["serde"]}
serde-aux = "4.7.0"
tracing = { version = "0.1.44", features = ["log"] }
tracing-subscriber = { version = "0.3.22", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
tracing-actix-web = "0.7.20"
argon2 = { version = "0.5.3", features = ["std"]}
dashmap = "6.2.1"
uuid = {version = "1.23.4", features = ["serde", "v4"]}
thiserror = "2.0.18"
validator = "0.20.0"
chrono = "0.4.45"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "blog_bin"



[dependencies.sqlx]
version = "0.9.0"
default-features = false
features = [
    "tls-rustls",
    "runtime-tokio",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]
